k8s/06-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: iapteca
  labels:
    app: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb
  sessionAffinity: ClientIP
