k8s/14-order-processing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-processing
  namespace: iapteca
  labels:
    app: order-processing
    tier: service
spec:
  type: ClusterIP
  selector:
    app: order-processing
  ports:
  - port: 3002
    targetPort: 3002
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  sessionAffinity: ClientIP
